# fastapi-simple-order-microservice

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_main.py
analytics_service/app/: main.py
analytics_service/app/api/: __init__.py  events.py
analytics_service/app/models/: event.py
app/: main.py
app/api/: benchmark.py  dependencies.py  items.py
app/core/: database.py  logger.py
app/domain/: category.py  interfaces.py  item.py
app/infrastructure/: analytics_client.py  db_models.py  repository.py  sql_repository.py
app/services/: item_service.py
client_service/: run.py
client_service/app/: main.py
client_service/app/api/: orders.py
client_service/app/models/: __init__.py  order.py
crud_service/app/: main.py
crud_service/app/api/: items.py
crud_service/app/core/: clients.py
crud_service/app/models/: item.py
tests/api/: test_benchmark.py  test_dependencies.py  test_health.py  test_items.py
tests/core/: test_database.py  test_logger.py
tests/domain/: test_category_models.py  test_item_models.py
tests/infrastructure/: test_analytics_client.py  test_db_models.py  test_in_memory_repository.py  test_sql_repository.py
tests/services/: test_item_service.py
